--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.19.1]
+        node-version: [14.19.1]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
