--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.19.1]
+        node-version: [16.18.1]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -40,7 +40,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - run: yarn && yarn build
+      - run: CI=false && yarn && yarn build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
